# modelscope-rag-observability

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml
.gemini/: settings.json
agent/modelscope/: comparison_dashboard.py  config.py  context_efficiency_analyzer.py  evaluator.py  experiment_store.py  failure_taxonomy.py  long_context_analyzer.py  mock_llm.py  optimizer.py  phoenix_evals.py  rag_pipeline.py
data/: benchmark_questions.json
data/docs/: efficient_transformers.txt
results/: example_experiments.json
