[project]
name = "gemini-hackathon"
version = "0.1.0"
description = "ADK shopping demo + Phoenix tracing for the Arize / Google Cloud hackathon track"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "openinference-instrumentation-google-adk>=0.1.11",
    "google-adk>=1.32.0",
    "google-genai>=1.9.0",
    "python-dotenv>=1.0.1",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "arize-phoenix>=7.0",
    "langgraph>=1.2.0",
    "llama-index>=0.14.21",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "openinference-instrumentation-google-genai>=1.0.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.3",
    "llama-index-llms-openai>=0.7.8",
    "llama-index-llms-anthropic>=0.11.4",
    "streamlit>=1.57.0",
    "pandas>=2.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["agent/shopping_demo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
